[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyli"
version = "2.0.2"
authors = [
  {name = "thenoviceoof", email = "thenoviceoof@gmail.com"},
]
description = "Better python CLI integration"
readme = "README.md"
requires-python = ">3.0"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
pyli = "pyli:script_entry_point"

[project.urls]
Repository = "https://github.com/thenoviceoof/pyli"
Issues = "https://github.com/thenoviceoof/pyli/issues"

[dependency-groups]
dev = [
    "black; python_version>='3.7'",
    "mypy>=0.720",
    "tox>=3.28.0",
]
